--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="static/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practical consciousness research - Project Metamorphosis | Исследование сознания - Проект «Метаморфоза»</title>
-    <meta name="description" content="Individual practical consciousness research. Method. Problem and nature of consciousness, phenomenon of consciousness, understanding process and physics of consciousness, orthogonal models of consciousness as a process. Practical study of consciousness. Nonduality. | Индивидуальное практическое исследование сознания. Метод и последствия. Рассмотрена проблема и природа сознания, феномен сознания, процесс понимания через физику сознания, ортогональные модели сознания как процесса. Практическое изучение сознания. Недвойственность. ">
+    <meta name="description" content="Individual practical consciousness research. Hard problem and nature of consciousness, phenomenon of consciousness, self-investigation, nonduality, understanding process and physics of consciousness, orthogonal models of consciousness as a process. Practical study of consciousness. | Индивидуальное практическое исследование сознания. Метод и последствия. Рассмотрена проблема и природа сознания, феномен сознания, процесс понимания через физику сознания, ортогональные модели сознания как процесса. Практическое изучение сознания. Недвойственность. ">
     <link rel="canonical" href="https://practice-report.github.io/">
     <link rel="alternate" hreflang="ru" href="https://practice-report.github.io/report/">
     <link rel="alternate" hreflang="en" href="https://practice-report.github.io/report_eng/">
